Closed
Bug 1120400
Opened 11 years ago
Closed 11 years ago
Elements with position:fixed are not fixed to the bottom of content window
Categories
(Core :: Panning and Zooming, defect)
Tracking
()
RESOLVED
FIXED
mozilla38
Tracking | Status | |
---|---|---|
firefox34 | --- | unaffected |
firefox35 | --- | unaffected |
firefox36 | --- | unaffected |
firefox37 | + | fixed |
firefox38 | --- | fixed |
b2g-v2.2 | --- | fixed |
b2g-master | --- | fixed |
fennec | 37+ | --- |
People
(Reporter: TeoVermesan, Assigned: botond)
References
Details
(Keywords: regression, reproducible)
Attachments
(2 files)
74.25 KB,
image/png
|
Details | |
3.17 KB,
patch
|
kats
:
review+
lmandel
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Tested with:
Device: Samsung Galaxy Nexus (Android 4.2.1), Nexus 4 (Android 4.4)
Steps to reproduce:
1. Open https://bug705506.bugzilla.mozilla.org/attachment.cgi?id=577122
Expected results:
- Fixed elements should stay fixed to the viewport.
Actual results:
- The fixed footer from the bottom of screen is displayed in the middle of the page.
Please see the attached screenshot.
Reporter | ||
Updated•11 years ago
|
status-firefox34:
--- → unaffected
status-firefox35:
--- → unaffected
status-firefox36:
--- → unaffected
status-firefox37:
--- → affected
Reporter | ||
Comment 1•11 years ago
|
||
Regression window-wanted:
1. mozilla-central:
good build: 07-01-2015
bad build: 08-01-2015
pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=33781a3a5201&tochange=70de2960aa87
2. inbound:
good build: 1420648378
bad build: 1420648560
pushlog: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=6399ee520bcc&tochange=a4c67bb878ff
Updated•11 years ago
|
Blocks: begone-nontransient
tracking-fennec: --- → ?
Flags: needinfo?(botond)
Flags: in-testsuite?
Keywords: regression,
reproducible
Assignee | ||
Comment 2•11 years ago
|
||
I can repro this. Will investigate.
Assignee: nobody → botond
Flags: needinfo?(botond)
Assignee | ||
Comment 3•11 years ago
|
||
This is broken on B2G as well.
Based on my investigation so far, I believe the problem is that the calculation of the |aPreviousTransformForRoot| argument for |AsyncCompositionManager::AlignFixedAndStickyLayers| [1] needs to be updated to reflect the changes in bug 1076241.
[1] http://mxr.mozilla.org/mozilla-central/source/gfx/layers/composite/AsyncCompositionManager.cpp?rev=15a1d3459835#265
Component: General → Panning and Zooming
Product: Firefox for Android → Core
Version: Firefox 37 → Trunk
Assignee | ||
Comment 4•11 years ago
|
||
It's nice when a fix to a bug consists of removing a piece of code that was arbitrary-seeming to begin with :)
Attachment #8547784 -
Flags: review?(bugmail.mozilla)
Comment 5•11 years ago
|
||
Comment on attachment 8547784 [details] [diff] [review]
bug1120400.patch
Review of attachment 8547784 [details] [diff] [review]:
-----------------------------------------------------------------
I don't understand this code, but having less of it is good :)
Attachment #8547784 -
Flags: review?(bugmail.mozilla) → review+
Assignee | ||
Comment 6•11 years ago
|
||
Try push that includes this patch: https://treeherder.mozilla.org/ui/#/jobs?repo=try&revision=8f40f1b579f6
Assignee | ||
Comment 7•11 years ago
|
||
green try |
(In reply to Botond Ballo [:botond] from comment #6)
> Try push that includes this patch:
> https://treeherder.mozilla.org/ui/#/jobs?repo=try&revision=8f40f1b579f6
Had to cancel that one due to a mistake an a different patch it included. Here's a new Try push, and it's green:
https://treeherder.mozilla.org/ui/#/jobs?repo=try&revision=f5237502df73
Assignee | ||
Comment 8•11 years ago
|
||
landing |
Updated•11 years ago
|
status-firefox38:
--- → affected
Comment 10•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
Updated•11 years ago
|
Assignee | ||
Comment 11•11 years ago
|
||
Comment on attachment 8547784 [details] [diff] [review]
bug1120400.patch
Approval Request Comment
[Feature/regressing bug #]: Bug 1076241.
[User impact if declined]: Fixed-position layers are mispositioned.
[Describe test coverage new/current, TBPL]: Tested locally, and landed on m-c.
[Risks and why]: Low; it's a small, straightforward, and isolated change.
[String/UUID change made/needed]: None.
Attachment #8547784 -
Flags: approval-mozilla-aurora?
Assignee | ||
Comment 12•11 years ago
|
||
(In reply to Botond Ballo [:botond] from comment #11)
> Comment on attachment 8547784 [details] [diff] [review]
> bug1120400.patch
>
> Approval Request Comment
> [Feature/regressing bug #]: Bug 1076241.
> [User impact if declined]: Fixed-position layers are mispositioned.
> [Describe test coverage new/current, TBPL]: Tested locally, and landed on
> m-c.
> [Risks and why]: Low; it's a small, straightforward, and isolated change.
> [String/UUID change made/needed]: None.
Note that the regression and the fix only affect APZ platforms (by default, just B2G) and Fennec.
Updated•11 years ago
|
tracking-fennec: ? → 37+
Reporter | ||
Comment 13•11 years ago
|
||
The fixed footer from the bottom of the screen is displayed correctly at the bottom of the page, so:
Verified as fixed on:
Device: Samsung Galaxy Nexus (Android 4.1.2) and Nexus 4 (Android 4.4)
Build: Firefox for Android 38.0a1 (2015-01-15)
![]() |
||
Updated•11 years ago
|
tracking-firefox37:
--- → +
![]() |
||
Comment 14•11 years ago
|
||
Attachment #8547784 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 15•11 years ago
|
||
Comment 16•11 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•