Bug 1120400 - Adjust the code for aligning fixed and sticky layers to account for the transform changes in bug 1076241. r=kats, a=lmandel